dev/styles.sass
@use "sass:map"
@use "mixins" as mx
@use "variables" as *

//CSS RESET
*,*::after,*::before
    box-sizing: border-box
body
    width: 100vw
    min-height: 100vh
    margin:-1px 0 0 0
    padding: 0
    border-top: 1px solid #000
    background-color: map.get($neutral-colors,"magnolia")
p,input,a,button,h1,h2,h3,h4,h5,h6
    font-family: 'Ubuntu',sans-serif
h4,h5,h6
    margin:0
p
    display: inline-block
    margin: 0
button
    background: none
    border: none
input
    border: none
    outline: none
fieldset
    border: none
    margin: 0
    padding:0
label::selection,label>*::selection
    display: none
//UTILITY CLASSES
.subtitle
    font:
        size: 1em
        weight: 500
    color: map.get($neutral-colors,'cool_gray')

.bold
    font:
        family: 'Ubuntu',sans-serif
        weight:700
    color: map-get($primary-colors,'marine_blue')
.light_text
    font:
        family:'Ubuntu',sans-serif
        weight:400
        size: .9em
    color: map.get($neutral-colors,'cool_gray') 

.label
    font:
        size: .9
        weight: 400
    color: map.get($primary-colors,'marine_blue')

.placeholder
    font-weight: 700
    color: map.get($neutral-colors,'cool_gray')
.button
    font-weight: 500
.rounded
    border-radius: 10px
.hidden
    visibility: hidden
.noactual
    display: none


//MAIN STYLES

.main
    @include mx.flex($align: flex-start)
    position: relative
    width: 100%
    height: 100vh
    border-radius: $rounded
    z-index:0
.content
    @include mx.flex()
    width: 90%
    margin-top: 6rem
.step
    width:100%
    padding:1rem 1.5rem 2rem
    border-radius: $rounded
    background-color: map.get($neutral-colors,'white')


    
.sidenav
    @include mx.flex($justify:space-around,$align:top)
    position: absolute
    top:0
    width:100%
    height: 10rem
    order: -1
    z-index:-1
    background: url('../multi-step-form-main/assets/images/bg-sidebar-mobile.svg') no-repeat 
    background-size: cover

    &__stepside
        margin-top: 2rem
        &__num
            @include mx.center()
            width:2.5rem
            height:2.5rem
            border: 1px solid map.get($neutral-colors,'light_gray')
            border-radius: 50%
            font-weight: bold
            color: map.get($neutral-colors,'white')
            transition: background .3s
        &__name
            display: none
            margin-top: 1rem
.actualstate
    background-color: map.get($primary-colors,'light_blue')
    color: #000

.footer
    @include mx.flex($justify:space-between)
    width:100%
    padding:1.5rem 3rem
    align-self: flex-end 
    background-color: map.get($neutral-colors,'white')

.next
    margin-left: auto
    padding:.5rem 1rem
    border-radius: calc($rounded / 2)
    background-color: map.get($primary-colors,'marine_blue')
    color: map.get($neutral-colors,'white')
    transition: opacity .3s
    &:hover
        opacity: .9
.back
    color: map.get($neutral-colors,'cool_gray')


// DESKTOP DESIGN STYLES
@media screen and (min-width:900px)
    .main
        display: grid
        grid-template-columns: 1fr 2.5fr
        grid-template-rows: 4fr 1fr
        grid-template-areas:"side content" "side foot"
        width: min(90%,80rem)
        max-height: 90vh
        padding: 1rem
        margin:3rem auto 0
        background-color: map.get($neutral-colors,"white")
    .sidenav
        flex-direction: column
        align-items: flex-start
        justify-content: flex-start
        gap: 1rem
        padding:2rem
        position: static
        height:100%
        border-radius: 10px
        background: url('/multi-step-form-main/assets/images/bg-sidebar-desktop.svg') no-repeat 
        background-size: cover
        grid-area: side
        &__stepside
            @include mx.flex($justify:flex-start)
            position: relative
            gap: 1rem
            width: 100%
            margin:0
            &__name
                display: inline-block
                text-transform: uppercase
                color: map.get($neutral-colors,"white")
                &::after
                    content: attr(title)
                    position: absolute
                    top: 0
                    left: 3.5rem
                    font:
                        size: .8em
                        weight: 400
                    color: map.get($neutral-colors,"light_gray")
    .content
        width:80%
        height: 100%
        margin:0 auto
        grid-area: content
    .footer
        grid-area: foot


@media screen and (min-width: 1300px)
    .main
        grid-template-columns: 1fr 4fr

